# AOC

./: .gitignore  CMakeLists.txt  comp1.txt  comp2.txt
2024/: CMakeLists.txt
2024/day1/: data.hpp  main.cpp
2024/day10/: data.txt  main  main.cpp
2024/day11/: main  main.cpp
2024/day12/: main.cpp
2024/day13/: data.txt  main.cpp
2024/day14/: data.txt  main.cpp
2024/day15/: main.cpp
2024/day16/: data.txt  main.cpp
2024/day17/: main.cpp  test.txt
2024/day18/: main  main.cpp
2024/day19/: main  main.cpp  sol.cpp
2024/day2/: main.cpp
2024/day20/: data.txt  main.cpp
2024/day21/: data.txt  main.cpp
2024/day22/: main.cpp
2024/day23/: data.txt  main.cpp
2024/day25/: main  main.cpp
2024/day3/: main.cpp
2024/day4/: main.cpp
2024/day5/: main  main.cpp
2024/day6/: main.cpp
2024/day7/: main  main.cpp
2024/day8/: main.cpp
2024/day9/: main  main.cpp
2025/: CMakeLists.txt  template.cpp
2025/c++/: CMakeLists.txt  template.cpp  utils.hpp
2025/c++/day1/: main.cpp
2025/c++/day10/: main  main.cpp
2025/c++/day2/: main  main.cpp
2025/c++/day3/: main
2025/c++/day4/: main  main.cpp
2025/c++/day5/: main  main.cpp  test2.txt
2025/c++/day6/: main  main.cpp
2025/c++/day7/: main  main.cpp
2025/c++/day8/: main  main.cpp
2025/c++/day9/: main  main.cpp
2025/day1/: main  main.cpp  test2.txt
2025/day3/: main.cpp
2025/kotlin/src/: Main.kt
2025/kotlin/src/day1/: Day1.kt
day1/: data.hpp  main.cpp
day10/: main  main.cpp  sol.cpp  test.txt
day11/: main  main.cpp
day12/: main  main.cpp
day13/: main.cpp
day14/: main.cpp
day15/: main.cpp
day16/: data.txt  magic.hpp  main.cpp
day17/: main  main.cpp  sol  sol.cpp  test.txt
day18/: main.cpp
day19/: main.cpp  sol.cpp
day2/: main.cpp
day20/: main.cpp
day21/: main  main.cpp
day22/: main.cpp
day23/: main.cpp
day25/: main.cpp
day3/: main.cpp
day4/: main.cpp
day5/: main.cpp
day6/: main.cpp
day7/: main.cpp
day8/: main.cpp
day9/: main.cpp
