cmake_minimum_required(VERSION 3.12)
project (AOC)

set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED True)


add_executable(day_1 day1/main.cpp)
add_executable(day_2 day2/main.cpp)
add_executable(day_3 day3/main.cpp)
add_executable(day_4 day4/main.cpp)
add_executable(day_5 day5/main.cpp)
add_executable(day_6 day6/main.cpp)
add_executable(day_7 day7/main.cpp)
add_executable(day_8 day8/main.cpp)
add_executable(day_9 day9/main.cpp)
add_executable(day_10 day10/main.cpp)
