cmake_minimum_required(VERSION 3.12)
project (AOC)

set(CMAKE_CXX_STANDARD 23)
set(CMAKE_CXX_STANDARD_REQUIRED True)


# dd_executable(day_1 day1/main.cpp)
# dd_executable(day_2 day2/main.cpp)
# dd_executable(day_3 day3/main.cpp)
# dd_executable(day_4 day4/main.cpp)
# dd_executable(day_5 day5/main.cpp)
# dd_executable(day_6 day6/main.cpp)
# dd_executable(day_7 day7/main.cpp)
# dd_executable(day_8 day8/main.cpp)
# dd_executable(day_9 day9/main.cpp)
# dd_executable(day_10 day10/main.cpp)
# dd_executable(day_11 day11/main.cpp)
# dd_executable(day_12 day12/main.cpp)
# dd_executable(day_13 day13/main.cpp)
# dd_executable(day_14 day14/main.cpp)
# dd_executable(day_15 day15/main.cpp)
# add_executable(day_16 day16/main.cpp)
# dd_executable(day_17 day17/main.cpp)
# dd_executable(day_18 day18/main.cpp)
add_executable(day_19 day19/main.cpp)
add_executable(day_20 day20/main.cpp)
add_executable(day_21 day21/main.cpp)

add_executable(day_25 day25/main.cpp)

add_executable(day_22 day22/main.cpp)
#add_executable(sol day19/sol.cpp)